--- a/_modules/cockatoo/screen.html
+++ b/_modules/cockatoo/screen.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>cockatoo.screen &mdash; cockatoo 0.0.1 documentation</title>
+    <title>cockatoo.screen &mdash; cockatoo 0.0.2 documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.0.1',
+        VERSION:     '0.0.2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="cockatoo 0.0.1 documentation" href="../../index.html" />
+    <link rel="top" title="cockatoo 0.0.2 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -39,7 +39,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">cockatoo 0.0.1 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">cockatoo 0.0.2 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -599,7 +599,7 @@
         <span class="c"># handle special case for tacsimate</span>
         <span class="k">if</span> <span class="n">re</span><span class="o">.</span><span class="n">search</span><span class="p">(</span><span class="s">r&#39;tacsimate&#39;</span><span class="p">,</span> <span class="n">compound</span><span class="o">.</span><span class="n">name</span><span class="p">):</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="n">re</span><span class="o">.</span><span class="n">search</span><span class="p">(</span><span class="s">r&#39;v/v&#39;</span><span class="p">,</span> <span class="n">compound</span><span class="o">.</span><span class="n">unit</span><span class="p">):</span>
-                <span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s">&#39;Malformed line, tacsimate should be % v/v: </span><span class="si">%s</span><span class="s">&#39;</span> <span class="o">%</span> <span class="p">(</span><span class="n">row</span><span class="p">))</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s">&#39;Malformed line, tacsimate should be % v/v: {}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">row</span><span class="p">))</span>
                 <span class="k">return</span> <span class="bp">None</span>
             <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">_create_tacsimate</span><span class="p">(</span><span class="n">compound</span><span class="p">):</span>
                 <span class="n">cocktail</span><span class="o">.</span><span class="n">add_compound</span><span class="p">(</span><span class="n">c</span><span class="p">)</span>
@@ -679,7 +679,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">cockatoo 0.0.1 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">cockatoo 0.0.2 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
